version 5 Issue: nav bar alignment fix

--- a/app/app.css
+++ b/app/app.css
@@ -351,7 +351,7 @@ h4[ng-click]{
 
 
 #nav-bar{
-    margin-right: -3.5em;
+    margin-right: -4.5em;
 }
 
 
@@ -393,6 +393,7 @@ h4[ng-click]{
 @media (min-width: 1024px){
     .fabec-ico{
         max-width: 13em;
+        margin-top: -2px;
     }
 
     .img-responsive-custom{
